--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=mercado
-spring.datasource.url=jdbc:postgresql://localhost:5432/mercado?useSSL=false&serverTimezone=UTC&useLegacyDateTime=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/mercado
 spring.datasource.username=postgres
 spring.datasource.password=guel1994
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
